syntax = 'proto3';

package proto;

option java_multiple_files = true;
option java_outer_classname = "StudentProto";
option java_package = "com.hujing.netty.proto";


service StudentService {
    rpc GetRealNameByUsername (MyRequest) returns (MyResponse) {
    }

    rpc GetStreamResponseByUsername (MyRequest) returns (stream StreamResponse) {
    }

    rpc SendStreamRequest (stream StreamResponse) returns (StreamResponseList) {
    }

    rpc SendStreamRequestAndGetResponse(stream TestStreamRequest) returns (stream TestStreamResponse){}
}

message MyRequest {
    string username = 1;
}

message MyResponse {
    string RealName = 1;
}

message StreamResponse {
    string city = 1;
    int32 code = 2;
}
message StreamResponseList {
    repeated StreamResponse streamResponse = 1;
}

message TestStreamRequest {
    string req = 1;
}

message TestStreamResponse {
    string resp = 1;
}